// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "mongodb"
  url      = env("DATABASE_URL")
}

model User {
  id               String    @id @default(auto()) @map("_id") @db.ObjectId
  stripeCustomerId String?
  name             String?
  email            String?   @unique
  emailVerified    DateTime?
  image            String?
  password         String?
  role             UserRole  @default(USER)
  isActive         Boolean   @default(true)
  createdAt        DateTime  @default(now())
  updatedAt        DateTime  @updatedAt

  account     Account[]
  bid         Bid[]
  userAuction UserAuction[]
  shipping    Shipping[]
}

model Account {
  id                String   @id @default(auto()) @map("_id") @db.ObjectId
  userId            String   @db.ObjectId
  type              String
  provider          String
  providerAccountId String
  refresh_token     String?  @db.String
  access_token      String?  @db.String
  expires_at        Int?
  token_type        String?
  scope             String?
  id_token          String?  @db.String
  session_state     String?
  createdAt         DateTime @default(now())
  updatedAt         DateTime @updatedAt

  user User @relation(fields: [userId], references: [id], onUpdate: Cascade, onDelete: Cascade)

  @@unique([provider, providerAccountId])
}

model Auction {
  id          String    @id @default(auto()) @map("_id") @db.ObjectId
  title       String
  description String?
  isPublished Boolean   @default(false)
  isApproved  Boolean   @default(false)
  status      Status    @default(UPCOMING)
  startDate   DateTime?
  endDate     DateTime?
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt

  lot         Lot[]
  userAuction UserAuction[]
}

model UserAuction {
  id        String      @id @default(auto()) @map("_id") @db.ObjectId
  userId    String      @db.ObjectId
  auctionId String      @db.ObjectId
  role      AuctionRole @default(OWNER)
  createdAt DateTime    @default(now())

  user    User    @relation(fields: [userId], references: [id], onUpdate: Cascade, onDelete: Cascade)
  auction Auction @relation(fields: [auctionId], references: [id], onUpdate: Cascade, onDelete: Cascade)
}

model Category {
  id          String        @id @default(auto()) @map("_id") @db.ObjectId
  name        String
  createdAt   DateTime      @default(now())
  lotCategory LotCategory[]

  @@unique([name])
}

model LotCategory {
  id         String @id @default(auto()) @map("_id") @db.ObjectId
  lotId      String @db.ObjectId
  categoryId String @db.ObjectId

  category Category @relation(fields: [categoryId], references: [id], onUpdate: Cascade, onDelete: Cascade)
  lot      Lot      @relation(fields: [lotId], references: [id], onUpdate: Cascade, onDelete: Cascade)

  @@unique([lotId, categoryId])
}

model LotDetail {
  id         String @id @default(auto()) @map("_id") @db.ObjectId
  lotId      String @db.ObjectId
  fieldName  String
  fieldValue String
  iconName   String

  lot Lot @relation(fields: [lotId], references: [id], onUpdate: Cascade, onDelete: Cascade)
}

model Lot {
  id              String   @id @default(auto()) @map("_id") @db.ObjectId
  auctionId       String   @db.ObjectId
  title           String
  position        Int
  description     String?
  startBid        Float?
  buyNowBid       Float?
  minBidIncrement Float?
  isSold          Boolean  @default(false)
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt

  auction     Auction       @relation(fields: [auctionId], references: [id], onUpdate: Cascade, onDelete: Cascade)
  video       Video[]
  photo       Photo[]
  bid         Bid[]
  lotCategory LotCategory[]
  lotDetail   LotDetail[]
  shipping    Shipping[]
}

model Video {
  id        String  @id @default(auto()) @map("_id") @db.ObjectId
  name      String
  pseudonym String?
  url       String
  publicId  String
  position  Int
  lotId     String  @db.ObjectId

  lot Lot @relation(fields: [lotId], references: [id], onUpdate: Cascade, onDelete: Cascade)
}

model Photo {
  id        String  @id @default(auto()) @map("_id") @db.ObjectId
  name      String
  pseudonym String?
  url       String
  publicId  String
  position  Int
  lotId     String  @db.ObjectId

  lot Lot @relation(fields: [lotId], references: [id], onUpdate: Cascade, onDelete: Cascade)
}

model Bid {
  id        String   @id @default(auto()) @map("_id") @db.ObjectId
  lotId     String   @db.ObjectId
  bidderId  String   @db.ObjectId
  amount    Float
  type      BidType  @default(BIDDING)
  isWinner  Boolean  @default(false)
  isPaid    Boolean  @default(false)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  lot  Lot  @relation(fields: [lotId], references: [id], onUpdate: Cascade, onDelete: Cascade)
  user User @relation(fields: [bidderId], references: [id], onUpdate: Cascade, onDelete: Cascade)

  @@unique([lotId, amount])
}

model Shipping {
  id         String         @id @default(auto()) @map("_id") @db.ObjectId
  lotId      String         @db.ObjectId
  userId     String         @db.ObjectId
  address    String
  city       String
  postalCode String
  firstName  String
  lastName   String
  phone      String
  email      String
  status     ShippingStatus @default(PENDING)
  createdAt  DateTime       @default(now())
  updatedAt  DateTime       @updatedAt

  lot  Lot  @relation(fields: [lotId], references: [id], onUpdate: Cascade, onDelete: Cascade)
  user User @relation(fields: [userId], references: [id], onUpdate: Cascade, onDelete: Cascade)
}

enum ShippingStatus {
  PENDING
  SHIPPED
  IN_TRANSIT
  DELIVERED
  CANCELED
}

enum Status {
  UPCOMING
  IN_PROGRESS
  COMPLETED
}

enum AuctionRole {
  OWNER
}

enum UserRole {
  USER
  ADMIN
}

enum BidType {
  BIDDING
  INSTANT
}
